@@ -316,7 +316,7 @@ The leaf of this node will be used as the tracefile name ({\tt mpi\_ping.prv} in
  \item {\tt joint-states}: which can be set to {\tt yes}, {\tt no}. Determines if the resulting Paraver tracefile will split or join equal consecutive states ({\em default is yes}).
  \item {\tt keep-mpits}: whether to keep the intermediate tracefiles after performing the merge ({\em currently unimplemented}).
  \item {\tt sort-addresses}: whether to sort all addresses that refer to the source code (enabled by default).
- \item {\tt sort-addresses}: set it to yes if you want to remove all the intermediate files after generating the Paraver tracefile.
+ \item {\tt overwrite}: set to yes if the new tracefile can overwrite an existing tracefile with the same name. If set to no, then the tracefile will be given a new name using a consecutive id.
 \end{itemize}
 
 \graybox{For further references, see chapter \ref{cha:Merging}.}
