@@ -106,7 +106,7 @@
     joint-states="yes"
     keep-mpits="yes"
     sort-addresses="yes"
-    remove-files="no"
+    overwrite="yes"
   >
     mpi_ping.prv 
   </merge>
