@@ -69,7 +69,7 @@
 		joint-states="yes"
 		keep-mpits="yes"
 		sort-addresses="yes"
-		remove-files="no"
+        overwrite="yes"
 	>
 		mpi_ping.prv
 	</merge>
