@@ -64,7 +64,7 @@
     joint-states="yes"
     keep-mpits="yes"
     sort-addresses="yes"
-		remove-files="no"
+    overwrite="yes"
   >
     pi_instrumented.prv
   </merge>
