@@ -58,7 +58,7 @@
     joint-states="yes"
     keep-mpits="yes"
     sort-addresses="yes"
-		remove-files="no"
+    overwrite="yes"
   >
     pi.prv
   </merge>
