@@ -100,7 +100,7 @@
     joint-states="yes"
     keep-mpits="yes"
     sort-addresses="yes"
-    remove-files="no"
+    overwrite="yes"
   >
     ping_online.prv
   </merge>
