@@ -44,7 +44,7 @@
     joint-states="yes"
     keep-mpits="yes"
     sort-addresses="yes"
-		remove-files="no"
+    overwrite="yes"
   >
     $UNICORE_PRV$
   </merge>
